2004-09-02 15:55 Bill Jones <w.t.jones@larc.nasa.gov>

	* src/gridcad.c (nearestOnFace,nearestOnEdge) added to apply
	CAPRI displacement matrix prior to projection.
	* src/FAKEGeomExtras.c added mock CADGeom_DisplacementIsIdentity,
	CADGeom_UnMapPoint, CADGeom_MapPoint

2004-08-31 22:31 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridparallelrelaxneg_) API change to add an
	argument to control if surface nodes are moved.
	* src/gridmpi.c (gridParallelRelaxNegativeCells) added 
	smoothOnSurface argument.
	* src/gridcad.c (gridSmoothVolumeNearNode) added smoothOnSurface
	argument.

2004-08-31 20:40 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmoothNodeVolume) added
	gridSmoothNodeVolumeWithSurf. To allow volume improvement of
	invalid surface meshes to make them vaild.

2004-08-31 19:50 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmoothNodeVolumeWithSurf) added. Note that
	using this single gradient and line sreach method failed in a
	number of cases. It needs to be replaced with congigent gradient.

2004-08-31 14:35 Mike Park  <mike.park@nasa.gov>

	* src/gridmath.h added (gridVectorScale).
	* src/gridmetric.h added (gridCellVolumeDerivative).

2004-08-30 21:04 Mike Park  <mike.park@nasa.gov>

	* src/refine_main.c added, was src/main.c.
	* src/main.c removed, renamed to src/refine_main.c.
	* src/Makefile.am renamed refine stand-alone main.c -> refine_main.c

2004-08-30 20:55 Mike Park  <mike.park@nasa.gov>

	* src/Makefile.am removed unused near object from librefine.a.

2004-08-30 09:21 Bill Jones <w.t.jones@larc.nasa.gov>

	* src/gridfortran.c, src/gridfortran.h (gridparallelloadcapri_) API
	change to add return code.
	* src/gridgeom.c (gridParallelGeomLoad) return NULL on failures.

2004-08-29 22:10 Mike Park  <mike.park@nasa.gov>

	* doc/refine.texi added texinfo file.

2004-08-29 12:20 Mike Park  <mike.park@nasa.gov>

	* doc/anisotropicMetric.tex renamed from doc/anIsoMesh.tex.
	* configure.ac added doc/Makefile to build.